Improve ClassGroup usage